--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Created by https://www.toptal.com/developers/gitignore/api/python,virtualenv
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,virtualenv
 
+### Internal TODOs
+TODO.md
+
 ### Python ###
 # Byte-compiled / optimized / DLL files
 __pycache__/
